--- a/views/priceSpecifications/new.ejs
+++ b/views/priceSpecifications/new.ejs
@@ -13,7 +13,7 @@ PS-01
     <%- include('../common/errorMessage') %>
     <%- include('../common/successMessage') %>
 
-    <%- include('form', { forms: forms }) %>
+    <%- include('form', { forms: forms, isNew: true }) %>
 
     <% /* 登録ボタン */ %>
     <button type="button" class="btn btn-ok btn-primary">登録する</button>
