--- a/views/priceSpecifications/update.ejs
+++ b/views/priceSpecifications/update.ejs
@@ -13,7 +13,7 @@ PS-01
     <%- include('../common/errorMessage') %>
     <%- include('../common/successMessage') %>
 
-    <%- include('form', { forms: forms }) %>
+    <%- include('form', { forms: forms, isNew: false }) %>
 
     <% /* 更新ボタン */ %>
     <button type="button" class="btn btn-ok btn-primary">更新する</button>
