--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -90,7 +90,7 @@
         <li class="nav-item<% if (offersShow) { %> active<% } %>">
             <a class="nav-link" data-toggle="collapse" href="#offers">
                 <i class="material-icons">local_offer</i>
-                <p> オファー(券種)
+                <p> オファー
                     <b class="caret"></b>
                 </p>
             </a>
