--- a/views/offers/_dataTables.ejs
+++ b/views/offers/_dataTables.ejs
@@ -115,12 +115,10 @@
                                     <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                 </a>
                             </td>
-                            <td name="availability">
-                                <span class="text-muted">$availability$</span>
-                            </td>
+                            <td name="availabilityName">$availabilityName$</td>
                             <td name="itemOfferedName">$itemOfferedName$</td>
                             <td name="categoryName">$categoryName$</td>
-                            <td name="name.ja|slice">$name.ja$</td>
+                            <td name="alternateName.ja|slice">$alternateName.ja$</td>
                             <td
                                 name="priceSpecification.price__priceSpecification.priceCurrency__priceSpecification.referenceQuantity.value__priceSpecification.referenceQuantity.unitCode">
                                 $priceSpecification.price$ $priceSpecification.priceCurrency$ /
@@ -152,8 +150,7 @@
                             </td>
                             <td name="id__itemOffered.typeOf">
                                 <a target="_blank" href="/offers/$id$/update?itemOffered[typeOf]=$itemOffered.typeOf$">
-                                    編集
-                                    <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
+                                    <i class="material-icons" style="font-size: 1.2em;">edit</i>
                                 </a>
                             </td>
                         </tr>
