--- a/views/reservations/index.ejs
+++ b/views/reservations/index.ejs
@@ -150,9 +150,9 @@ Aa-11
                                     </div>
                                     <div class="form-group bmd-form-group col-md-2">
                                         <label for="reservedTicket[ticketedSeat][seatNumber]" class="bmd-label-static">
-                                            券種コード
+                                            オファーID
                                         </label>
-                                        <input class="form-control" placeholder="券種コード"
+                                        <input class="form-control" placeholder="オファーID"
                                             name="reservedTicket[ticketType][id]" id="reservedTicket[ticketType][id]" />
                                     </div>
                                     <div class="form-group bmd-form-group col-md-2">
