--- a/views/places/movieTheater/form.ejs
+++ b/views/places/movieTheater/form.ejs
@@ -6,53 +6,65 @@
     </div>
 
     <div class="card-body">
+        <div class="form-group bmd-form-group">
+            <label for="branchCode" class="bmd-label-static">
+                枝番号<span class="text-danger">＊</span>
+            </label>
+            <% if (isNew) { %>
+            <input type="text" class="form-control" name="branchCode" id="branchCode" placeholder="" maxlength="20"
+                value="<%= forms.branchCode %>">
+            <span class="bmd-help">半角20文字以内でご入力ください</span>
+            <% } else { %>
+            <input readonly type="text" class="form-control" name="branchCode" id="branchCode" placeholder=""
+                maxlength="20" value="<%= forms.branchCode %>">
+            <% } %>
+            <% if (errors && errors.branchCode) { %>
+            <p class="text-danger">
+                <%- errors.branchCode.msg %>
+            </p>
+            <% } %>
+        </div>
 
         <div class="form-group bmd-form-group">
             <label for="name[ja]" class="bmd-label-static">
                 名称<span class="text-danger">＊</span>
             </label>
-            <input class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=64
+            <input class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength="64"
                 value="<%= forms.name.ja %>">
-            <p class="message">
-                全角64文字以内でご入力ください。
-            </p>
-            <p class="error message text-danger">
-                <% if (errors && errors['name.ja']) { %>
+            <span class="bmd-help">全角64文字以内でご入力ください</span>
+            <% if (errors && errors['name.ja']) { %>
+            <p class="text-danger">
                 <%- errors['name.ja'].msg %>
-                <% } %>
             </p>
+            <% } %>
         </div>
 
         <div class="form-group bmd-form-group">
             <label for="name[en]" class="bmd-label-static">
                 英語名称
             </label>
-            <input class="form-control" name="name[en]" id="name[en]" placeholder="" maxlength=64
+            <input class="form-control" name="name[en]" id="name[en]" placeholder="" maxlength="64"
                 value="<%= forms.name.en %>">
-            <p class="message">
-                全角64文字以内でご入力ください。
-            </p>
-            <p class="error message text-danger">
-                <% if (errors && errors['name.en']) { %>
+            <span class="bmd-help">半角64文字以内でご入力ください</span>
+            <% if (errors && errors['name.en']) { %>
+            <p class="text-danger">
                 <%- errors['name.en'].msg %>
-                <% } %>
             </p>
+            <% } %>
         </div>
 
         <div class="form-group bmd-form-group">
             <label for="kanaName" class="bmd-label-static">
                 カナ名称
             </label>
-            <input class="form-control" name="kanaName" id="kanaName" placeholder="" maxlength=64
+            <input class="form-control" name="kanaName" id="kanaName" placeholder="" maxlength="64"
                 value="<%= forms.kanaName %>">
-            <p class="message">
-                全角64文字以内でご入力ください。
-            </p>
-            <p class="error message text-danger">
-                <% if (errors && errors.kanaName) { %>
+            <span class="bmd-help">全角64文字以内でご入力ください</span>
+            <% if (errors && errors.kanaName) { %>
+            <p class="text-danger">
                 <%- errors.kanaName.msg %>
-                <% } %>
             </p>
+            <% } %>
         </div>
 
         <div class="form-group bmd-form-group">
@@ -61,13 +73,11 @@
             </label>
             <input type="tel" class="form-control" name="telephone" id="telephone" placeholder="" maxlength=64
                 value="<%= forms.telephone %>">
-            <p class="message">
-            </p>
-            <p class="error message text-danger">
-                <% if (errors && errors.telephone) { %>
+            <% if (errors && errors.telephone) { %>
+            <p class="text-danger">
                 <%- errors.telephone.msg %>
-                <% } %>
             </p>
+            <% } %>
         </div>
 
     </div>
