--- a/views/places/seat/form.ejs
+++ b/views/places/seat/form.ejs
@@ -60,7 +60,7 @@
 
         <div class="form-group bmd-form-group">
             <label for="seatingType" class="bmd-label-static">
-                座席タイプ
+                座席区分
             </label>
             <select class="form-control" name="seatingType">
                 <option value="">---</option>
