--- a/views/places/seat/index.ejs
+++ b/views/places/seat/index.ejs
@@ -27,7 +27,7 @@ ST-01
                             <%- include('../../common/master/_hidden') %>
 
                             <div class="form-row">
-                                <div class="form-group bmd-form-group col-md-3">
+                                <div class="form-group bmd-form-group col-md-2">
                                     <label for="containedInPlace[containedInPlace][containedInPlace][branchCode][$eq]"
                                         class="bmd-label-static">
                                         劇場
@@ -43,7 +43,7 @@ ST-01
                                     </select>
                                 </div>
 
-                                <div class="form-group bmd-form-group col-md-3">
+                                <div class="form-group bmd-form-group col-md-2">
                                     <label for="branchCode[$eq]" class="bmd-label-static">
                                         コード
                                     </label>
@@ -64,7 +64,7 @@ ST-01
                                     <th>劇場</th>
                                     <th>スクリーン</th>
                                     <th>セクション</th>
-                                    <th>座席タイプ</th>
+                                    <th>座席区分</th>
                                     <th>追加特性</th>
                                 </tr>
                             </thead>
