--- a/views/ticketType/form.ejs
+++ b/views/ticketType/form.ejs
@@ -277,7 +277,7 @@
 
             <div class="form-group bmd-form-group col-md-3">
                 <label for="eligibleSeatingType[][id]" class="bmd-label-static">
-                    適用座席タイプ
+                    適用座席区分
                 </label>
                 <div class="input-group">
                     <select class="form-control" name="eligibleSeatingType[][id]">
