--- a/views/places/screeningRoom/index.ejs
+++ b/views/places/screeningRoom/index.ejs
@@ -26,18 +26,20 @@ SR-01
                         <form method="post">
                             <%- include('../../common/master/_hidden') %>
 
-                            <div class="form-group bmd-form-group">
-                                <label for="containedInPlace[branchCode][$eq]" class="bmd-label-static">
-                                    劇場
-                                </label>
-                                <select class="form-control" name="containedInPlace[branchCode][$eq]">
-                                    <option value="">選択してください</option>
-                                    <% for (const movieTheater of movieTheaters) { %>
-                                    <option value="<%= movieTheater.branchCode %>">
-                                        <%= movieTheater.name.ja %>
-                                    </option>
-                                    <% } %>
-                                </select>
+                            <div class="form-row">
+                                <div class="form-group bmd-form-group col-md-2">
+                                    <label for="containedInPlace[branchCode][$eq]" class="bmd-label-static">
+                                        劇場
+                                    </label>
+                                    <select class="form-control" name="containedInPlace[branchCode][$eq]">
+                                        <option value="">選択してください</option>
+                                        <% for (const movieTheater of movieTheaters) { %>
+                                        <option value="<%= movieTheater.branchCode %>">
+                                            <%= movieTheater.name.ja %>
+                                        </option>
+                                        <% } %>
+                                    </select>
+                                </div>
                             </div>
                         </form>
                     </div>
