--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -129,8 +129,8 @@
                             </div>
 
                             <div class="form-row">
-                                <div class="form-group bmd-form-group col-md-6">
-                                    <label class="bmd-label-static" for="saleStartDate">販売開始日</label>
+                                <div class="form-group bmd-form-group col-md-5">
+                                    <label class="bmd-label-static" for="saleStartDate">販売開始日時</label>
                                     <div class="checkbox-radios">
                                         <div class="form-check form-check-radio form-check-inline">
                                             <label class="form-check-label">
@@ -173,8 +173,8 @@
                                     </div>
                                 </div>
 
-                                <div class="form-group bmd-form-group col-md-3">
-                                    <label class="bmd-label-static" for="onlineDisplayStartDate">オンライン表示開始日</label>
+                                <div class="form-group bmd-form-group col-md-5">
+                                    <label class="bmd-label-static" for="onlineDisplayStartDate">オンライン表示開始日時</label>
                                     <div class="form-check form-check-radio form-check-inline">
                                         <label class="form-check-label">
                                             <input class="form-check-input" type="radio" name="onlineDisplayType"
@@ -196,7 +196,10 @@
 
                                     <div class="form-inline input-type" data-input-type="absolute">
                                         <input type="text" class="form-control datepicker"
-                                            name="onlineDisplayStartDateAbsolute" placeholder="YYYY/MM/DD" maxlength=10>
+                                            name="onlineDisplayStartDateAbsolute" placeholder="YYYY/MM/DD"
+                                            maxlength=10>&nbsp;&nbsp;
+                                        <input type="text" name="onlineDisplayStartTime" class="form-control timepicker"
+                                            autocomplete="off" placeholder="HH:mm" value="00:00">
                                     </div>
                                     <div class="form-inline d-none input-type" data-input-type="relative">
                                         <input type="text" class="form-control" name="onlineDisplayStartDateRelative"
@@ -204,7 +207,7 @@
                                     </div>
                                 </div>
 
-                                <div class="form-group bmd-form-group col-md-3">
+                                <div class="form-group bmd-form-group col-md-2">
                                     <label class="bmd-label-static">座席指定</label>
                                     <div class="form-check form-check-inline">
                                         <label class="form-check-label">
