### Added - 予約部分変更を追加

--- a/views/common/master/_loading.ejs
+++ b/views/common/master/_loading.ejs
@@ -5,7 +5,7 @@
                 <div class="loader mt-0 mb-3">
                     Loading...
                 </div>
-                <div class="text-center text-white">検索しています...</div>
+                <div class="text-center text-white">Loading...</div>
             </div>
         </div>
     </div>
