--- a/views/reservations/_dataTables.ejs
+++ b/views/reservations/_dataTables.ejs
@@ -2,7 +2,7 @@
     <div id="datatables_wrapper" class="dataTables_wrapper dt-bootstrap4">
         <div class="row">
             <div class="col-sm-12">
-                <form method="post">
+                <form method="post" class="search">
                     <%- include('../common/master/_hidden') %>
 
                     <div class="form-row">
