--- a/views/reservations/index.ejs
+++ b/views/reservations/index.ejs
@@ -42,6 +42,23 @@ Aa-11
             </div>
         </div>
     </div>
+
+    <div class="modal fade" id="modal-edit" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title"></h4>
+                </div>
+                <div class="modal-body">
+                </div>
+                <div class="modal-footer">
+                    <a class="btn btn-primary btn-update" href="#">
+                        <i class="material-icons">save</i> 保存</a>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <%- include('../common/master/_loading') %>
